<resources>
    <string name="app_name">FirebaseAuth</string>
    <string name="edt_email">Email</string>
    <string name="edt_password">Password</string>
    <string name="edt_new_password">New Password</string>
    <string name="edt_confirm_password">Confirm Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="txt_email">Email: %s</string>
</resources>
