<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".activities.HomeActivity">

    <TextView
        android:id="@+id/txt_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_email"
        android:textSize="@dimen/font_25sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/btn_sign_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_sign_out"
            android:layout_marginTop="@dimen/_10dp"
            android:padding="@dimen/_10dp"
            android:textColor="@android:color/white"
            android:background="@color/colorAccent"/>

        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_reset_password"
            android:layout_marginTop="@dimen/_10dp"
            android:padding="@dimen/_10dp"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginLeft="@dimen/_20dp"
            android:textColor="@android:color/white"
            android:background="@color/colorAccent"/>
    </LinearLayout>

</LinearLayout>